--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
+    "react-widgets": "^5.8.4",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
